src/test/deca/context/invalid/created/test-a-24.deca
class A{
    int go(int k){
        while(k<10){
            k = k+1;
        }
        while(k>-10){
            k = k - k/2;
        }
        while(k<=12){
            k = k+3;
        }
        return k;
    }
}